--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
 
   <title>Shayan - Portfolio</title>
   <meta name="description" content="Shayan Portfolio">
@@ -15,5 +14,6 @@
 
 <body>
   Hello world
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" async>></script>
 </body>
 </html>
